Assert triggered in SelectorChecker::checkOneSelector when scrollbar (e.g. :horizontal) selector is specified. https://bugs.webkit.org/show_bug.cgi?id=106414

Reviewed by Dimitri Glazkov.

Source/WebCore:

In SelectorChecker::checkOneSelector, scrollbar related pseudoType (e.g. :horizontal) is not handled anywhere.
This caused ASSERT triggered. We have to check them.

Test: fast/css/scrollbar-crash.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkOneSelector):

LayoutTests:

* fast/css/scrollbar-crash-expected.txt: Added.
* fast/css/scrollbar-crash.html: Added.


Canonical link: https://commits.webkit.org/124716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139267 268f45cc-cd09-0410-ab3c-d52691b4dbfc